--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style2.css">
+	<link rel="stylesheet" href="style.css">
 	<title>Task List</title>
 </head>
 
 <body>
 	<header>
-		<h1>Task List</h1>
+		<h1>TO DO LIST</h1>
 		<form id="new-task-form">
 			<input type="text" id="new-task-input" placeholder="What do you have planned?">
 			<button type="submit" id="new-task-submit">Add Task</button>
